# yolo_coin

./: .gitignore  CMakeLists.txt  README.md  Yolo.cpp  Yolo.h  build.bat  build.sh  conanfile.py  conanfile.txt  main.cpp
pc/: CMakeLists.txt  coin.h  fps.cpp  install_opencv4.sh  main.cpp  videoStream.cpp
pi/: CMakeLists.txt  README.md  main.cpp
